[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
lazy_static = "1.4.0"
regex = "1.10.2"
num = "0.4"

[dev-dependencies]
pretty_assertions = "1.4.0"
